# ml_practice

./: .gitignore  Makefile  data.dvc  data2.dvc  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
data/raw/: .gitignore  credit_score.csv  credit_score.csv.dvc
gx_practice/gx/: great_expectations.yml
gx_practice/gx/expectations/: .ge_store_backend_id  credit_score_suite.json
gx_practice/gx/validation_definitions/: credit_score_definition.json
notebooks/: 01_EDA.ipynb  features.ipynb  practice.ipynb
src/: main.py
src/data/: load_data.py
src/features/: preprocess_data.py
tests/: test_data.py
